# blas-testing

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
cmake/: FindCBLAS.cmake  FindMKL.cmake
src/: cblas_helper.h  direct_dgemm.h
src/cpp/dgemm/: CMakeLists.txt  FindBLAS.cmake  dgemm_example.cpp
src/cpp/openblas/: CMakeLists.txt  dgemm_example.cpp
src/fortran/dgemm/: CMakeLists.txt  dgemm_example.f90
src/fortran/openblas/: CMakeLists.txt  dgemm_example.f90
src/mixed/: CMakeLists.txt  fortran_wrapper.f90  mixed_example.cpp
